election/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election
  labels:
    app: election
spec:
  replicas: 1
  selector:
    matchLabels:
      app: election
  template:
    metadata:
      labels:
        app: election
    spec:
      containers:
        - name: election
          image: username/election:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
