election/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: election
  namespace: omp
  labels:
    app: election
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: election
