election/kubernetes/virtual-service.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-election-network-rule
    namespace: omp
  spec:
    hosts:
    - election
    http:
    - route:
      - destination:
          host: election
      timeout: 3s
